# mkocaml

./: .gitignore  LICENSE  Makefile  README.md  dune  dune-project  mkocaml.ml  mkocaml.opam
lib/git/: dune  gitUtils.ml
lib/io/: dune  ioUtils.ml
lib/makefile/: dune  makefileUtils.ml
lib/opam/: dune  opamUtils.ml
