
opam-version: "2.0"
version: "1.0"
authors: "Chris Nevers <christophernevers96@gmail.com>"
maintainer: "Chris Nevers <christophernevers96@gmail.com>"
homepage: "https://github.com/chrisnevers/mkocaml"
bug-reports: "https://github.com/chrisnevers/mkocaml/issues"
dev-repo: "git://github.com/chrisnevers/mkocaml.git"
synopsis: "Tool to generate OCaml projects"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build},
  "unix"
]
